<?xml version="1.0" encoding="utf-8"?>



<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackground"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150px"
        android:id="@+id/imgLogo"
        android:src="@drawable/databaseicon3"
        android:layout_gravity="left"
        android:foregroundGravity="left"
        android:background="@color/logoBackground"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myZone"
        android:id="@+id/tvMyZone"
        android:gravity="right"
        android:textColor="@color/summary"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="11"
        android:rowCount="1"
        android:padding="5dp">
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:text="@string/titleRes"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:focusable="false"
            android:layout_columnSpan="7"
            android:layout_column="0"
            android:layout_gravity="center_vertical"
            android:textSize="@dimen/title"
            android:textColor="@color/title"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Schedule"
            android:id="@+id/switch1"
            android:layout_row="0"
            android:layout_column="9"
            android:layout_gravity="bottom|left|top"
            android:descendantFocusability="blocksDescendants"
            android:textColor="@color/summary"
            />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:numStars="1"
            android:stepSize="1"
            android:layout_column="10"
            android:layout_row="0"
            android:descendantFocusability="blocksDescendants"
            android:layout_gravity="left"
            />
    </GridLayout>


    <!--Genre-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notFound"
            android:id="@+id/tvGenreVal"
            android:textColor="@color/summary"
            android:textSize="@dimen/summary"/>



    <!--Year-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notFound"
            android:id="@+id/tvYearVal"
            android:textColor="@color/summary"
            android:textSize="@dimen/summary"
            android:layout_marginRight="10dp"/>





    <!--Network-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notFound"
            android:id="@+id/tvNetVal"
            android:textColor="@color/summary"
            android:textSize="@dimen/summary"/>


    <!--Schedule-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notFound"
            android:id="@+id/tvScheduleVal"
            android:textColor="@color/summary"
            android:textSize="@dimen/summary"/>



    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/listView"
        android:layout_gravity="center_horizontal|bottom|left|right|top"
        android:layout_weight="0.84"
        android:clickable="true"
        android:background="@drawable/border"
        android:layout_margin="2dp"
        android:padding="5dp"
        android:divider="@color/summary"
        android:dividerHeight="2px"/>


</LinearLayout>


